cmake_minimum_required(VERSION 3.12.2)

project( GTMathematics
	DESCRIPTION
		"Geometric Tools Engine Mathematics Library"
	LANGUAGES
		CXX
	VERSION
		4.6
)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release"
    CACHE STRING "Configuration types" FORCE)

set( INSTALL_DESTINATIONS GTE )

add_library(GTMathematics STATIC)
target_sources( ${PROJECT_NAME}
	PRIVATE
  Mathematics/ACosEstimate.h
  Mathematics/AdaptiveSkeletonClimbing2.h
  Mathematics/AdaptiveSkeletonClimbing3.h
  Mathematics/AlignedBox.h
  Mathematics/APConversion.h
  Mathematics/APInterval.h
  Mathematics/ApprCircle2.h
  Mathematics/ApprCone3.h
  Mathematics/ApprCylinder3.h
  Mathematics/ApprEllipse2.h
  Mathematics/ApprEllipseByArcs.h
  Mathematics/ApprEllipsoid3.h
  Mathematics/ApprGaussian2.h
  Mathematics/ApprGaussian3.h
  Mathematics/ApprGreatCircle3.h
  Mathematics/ApprHeightLine2.h
  Mathematics/ApprHeightPlane3.h
  Mathematics/ApprOrthogonalLine2.h
  Mathematics/ApprOrthogonalLine3.h
  Mathematics/ApprOrthogonalPlane3.h
  Mathematics/ApprParaboloid3.h
  Mathematics/ApprPolynomial2.h
  Mathematics/ApprPolynomial3.h
  Mathematics/ApprPolynomial4.h
  Mathematics/ApprPolynomialSpecial2.h
  Mathematics/ApprPolynomialSpecial3.h
  Mathematics/ApprPolynomialSpecial4.h
  Mathematics/ApprQuadratic2.h
  Mathematics/ApprQuadratic3.h
  Mathematics/ApprQuery.h
  Mathematics/ApprSphere3.h
  Mathematics/ApprTorus3.h
  Mathematics/ArbitraryPrecision.h
  Mathematics/Arc2.h
  Mathematics/Array2.h
  Mathematics/Array3.h
  Mathematics/Array4.h
  Mathematics/ASinEstimate.h
  Mathematics/ATanEstimate.h
  Mathematics/AtomicMinMax.h
  Mathematics/AxisAngle.h
  Mathematics/BandedMatrix.h
  Mathematics/BasisFunction.h
  Mathematics/BezierCurve.h
  Mathematics/BitHacks.h
  Mathematics/BoxManager.h
  Mathematics/BSNumber.h
  Mathematics/BSplineCurve.h
  Mathematics/BSplineCurveFit.h
  Mathematics/BSplineGeodesic.h
  Mathematics/BSplineReduction.h
  Mathematics/BSplineSurface.h
  Mathematics/BSplineSurfaceFit.h
  Mathematics/BSplineVolume.h
  Mathematics/BSPPolygon2.h
  Mathematics/BSPrecision.h
  Mathematics/BSRational.h
  Mathematics/Capsule.h
  Mathematics/ChebyshevRatio.h
  Mathematics/CholeskyDecomposition.h
  Mathematics/Circle3.h
  Mathematics/CLODPolyline.h
  Mathematics/Cone.h
  Mathematics/ConformalMapGenus0.h
  Mathematics/ConstrainedDelaunay2.h
  Mathematics/ContAlignedBox.h
  Mathematics/ContCapsule3.h
  Mathematics/ContCircle2.h
  Mathematics/ContCone.h
  Mathematics/ContCylinder3.h
  Mathematics/ContEllipse2.h
  Mathematics/ContEllipse2MinCR.h
  Mathematics/ContEllipsoid3.h
  Mathematics/ContEllipsoid3MinCR.h
  Mathematics/ContLozenge3.h
  Mathematics/ContOrientedBox2.h
  Mathematics/ContOrientedBox3.h
  Mathematics/ContPointInPolygon2.h
  Mathematics/ContPointInPolyhedron3.h
  Mathematics/ContScribeCircle2.h
  Mathematics/ContScribeCircle3Sphere3.h
  Mathematics/ContSphere3.h
  Mathematics/ConvertCoordinates.h
  Mathematics/ConvexHull2.h
  Mathematics/ConvexHull3.h
  Mathematics/ConvexMesh3.h
  Mathematics/ConvexPolyhedron3.h
  Mathematics/CosEstimate.h
  Mathematics/CubicRootsQR.h
  Mathematics/CurvatureFlow2.h
  Mathematics/CurvatureFlow3.h
  Mathematics/CurveExtractor.h
  Mathematics/CurveExtractorSquares.h
  Mathematics/CurveExtractorTriangles.h
  Mathematics/Cylinder3.h
  Mathematics/DarbouxFrame.h
  Mathematics/DCPQuery.h
  Mathematics/Delaunay2.h
  Mathematics/Delaunay2Mesh.h
  Mathematics/Delaunay3.h
  Mathematics/Delaunay3Mesh.h
  Mathematics/DisjointIntervals.h
  Mathematics/DisjointRectangles.h
  Mathematics/DistAlignedBox3OrientedBox3.h
  Mathematics/DistAlignedBoxAlignedBox.h
  Mathematics/DistCircle3Circle3.h
  Mathematics/DistLine3AlignedBox3.h
  Mathematics/DistLine3Circle3.h
  Mathematics/DistLine3OrientedBox3.h
  Mathematics/DistLine3Rectangle3.h
  Mathematics/DistLine3Triangle3.h
  Mathematics/DistLineLine.h
  Mathematics/DistLineRay.h
  Mathematics/DistLineSegment.h
  Mathematics/DistOrientedBox3OrientedBox3.h
  Mathematics/DistPoint3Circle3.h
  Mathematics/DistPoint3ConvexPolyhedron3.h
  Mathematics/DistPoint3Cylinder3.h
  Mathematics/DistPoint3Frustum3.h
  Mathematics/DistPoint3Plane3.h
  Mathematics/DistPoint3Rectangle3.h
  Mathematics/DistPoint3Tetrahedron3.h
  Mathematics/DistPointAlignedBox.h
  Mathematics/DistPointHyperellipsoid.h
  Mathematics/DistPointLine.h
  Mathematics/DistPointOrientedBox.h
  Mathematics/DistPointRay.h
  Mathematics/DistPointSegment.h
  Mathematics/DistPointTriangle.h
  Mathematics/DistPointTriangleExact.h
  Mathematics/DistRay3AlignedBox3.h
  Mathematics/DistRay3OrientedBox3.h
  Mathematics/DistRay3Rectangle3.h
  Mathematics/DistRay3Triangle3.h
  Mathematics/DistRayRay.h
  Mathematics/DistRaySegment.h
  Mathematics/DistRectangle3AlignedBox3.h
  Mathematics/DistRectangle3OrientedBox3.h
  Mathematics/DistRectangle3Rectangle3.h
  Mathematics/DistSegment3AlignedBox3.h
  Mathematics/DistSegment3OrientedBox3.h
  Mathematics/DistSegment3Rectangle3.h
  Mathematics/DistSegment3Triangle3.h
  Mathematics/DistSegmentSegment.h
  Mathematics/DistSegmentSegmentExact.h
  Mathematics/DistTriangle3AlignedBox3.h
  Mathematics/DistTriangle3OrientedBox3.h
  Mathematics/DistTriangle3Rectangle3.h
  Mathematics/DistTriangle3Triangle3.h
  Mathematics/EdgeKey.h
  Mathematics/Ellipse3.h
  Mathematics/EllipsoidGeodesic.h
  Mathematics/ETManifoldMesh.h
  Mathematics/ETNonmanifoldMesh.h
  Mathematics/EulerAngles.h
  Mathematics/Exp2Estimate.h
  Mathematics/ExpEstimate.h
  Mathematics/ExtremalQuery3.h
  Mathematics/ExtremalQuery3BSP.h
  Mathematics/ExtremalQuery3PRJ.h
  Mathematics/FastGaussianBlur1.h
  Mathematics/FastGaussianBlur2.h
  Mathematics/FastGaussianBlur3.h
  Mathematics/FastMarch.h
  Mathematics/FastMarch2.h
  Mathematics/FastMarch3.h
  Mathematics/FeatureKey.h
  Mathematics/FIQuery.h
  Mathematics/FPInterval.h
  Mathematics/FrenetFrame.h
  Mathematics/Frustum3.h
  Mathematics/GaussianBlur2.h
  Mathematics/GaussianBlur3.h
  Mathematics/GaussianElimination.h
  Mathematics/GaussNewtonMinimizer.h
  Mathematics/GenerateMeshUV.h
  Mathematics/GMatrix.h
  Mathematics/GradientAnisotropic2.h
  Mathematics/GradientAnisotropic3.h
  Mathematics/GVector.h
  Mathematics/Halfspace.h
  Mathematics/Histogram.h
  Mathematics/Hyperellipsoid.h
  Mathematics/Hyperplane.h
  Mathematics/Hypersphere.h
  Mathematics/IEEEBinary.h
  Mathematics/IEEEBinary16.h
  Mathematics/Image.h
  Mathematics/Image2.h
  Mathematics/Image3.h
  Mathematics/ImageUtility2.h
  Mathematics/ImageUtility3.h
  Mathematics/IndexAttribute.h
  Mathematics/Integration.h
  Mathematics/IntpAkima1.h
  Mathematics/IntpAkimaNonuniform1.h
  Mathematics/IntpAkimaUniform1.h
  Mathematics/IntpAkimaUniform2.h
  Mathematics/IntpAkimaUniform3.h
  Mathematics/IntpBicubic2.h
  Mathematics/IntpBilinear2.h
  Mathematics/IntpBSplineUniform.h
  Mathematics/IntpLinearNonuniform2.h
  Mathematics/IntpLinearNonuniform3.h
  Mathematics/IntpQuadraticNonuniform2.h
  Mathematics/IntpSphere2.h
  Mathematics/IntpThinPlateSpline2.h
  Mathematics/IntpThinPlateSpline3.h
  Mathematics/IntpTricubic3.h
  Mathematics/IntpTrilinear3.h
  Mathematics/IntpVectorField2.h
  Mathematics/IntrAlignedBox2AlignedBox2.h
  Mathematics/IntrAlignedBox2Circle2.h
  Mathematics/IntrAlignedBox2OrientedBox2.h
  Mathematics/IntrAlignedBox3AlignedBox3.h
  Mathematics/IntrAlignedBox3Cone3.h
  Mathematics/IntrAlignedBox3Cylinder3.h
  Mathematics/IntrAlignedBox3OrientedBox3.h
  Mathematics/IntrAlignedBox3Sphere3.h
  Mathematics/IntrArc2Arc2.h
  Mathematics/IntrCapsule3Capsule3.h
  Mathematics/IntrCircle2Arc2.h
  Mathematics/IntrCircle2Circle2.h
  Mathematics/IntrConvexMesh3Plane3.h
  Mathematics/IntrConvexPolygonHyperplane.h
  Mathematics/IntrDisk2Sector2.h
  Mathematics/IntrEllipse2Ellipse2.h
  Mathematics/IntrEllipsoid3Ellipsoid3.h
  Mathematics/IntrHalfspace2Polygon2.h
  Mathematics/IntrHalfspace3Capsule3.h
  Mathematics/IntrHalfspace3Cylinder3.h
  Mathematics/IntrHalfspace3Ellipsoid3.h
  Mathematics/IntrHalfspace3OrientedBox3.h
  Mathematics/IntrHalfspace3Segment3.h
  Mathematics/IntrHalfspace3Sphere3.h
  Mathematics/IntrHalfspace3Triangle3.h
  Mathematics/IntrIntervals.h
  Mathematics/IntrLine2AlignedBox2.h
  Mathematics/IntrLine2Arc2.h
  Mathematics/IntrLine2Circle2.h
  Mathematics/IntrLine2Line2.h
  Mathematics/IntrLine2OrientedBox2.h
  Mathematics/IntrLine2Ray2.h
  Mathematics/IntrLine2Segment2.h
  Mathematics/IntrLine2Triangle2.h
  Mathematics/IntrLine3AlignedBox3.h
  Mathematics/IntrLine3Capsule3.h
  Mathematics/IntrLine3Cone3.h
  Mathematics/IntrLine3Cylinder3.h
  Mathematics/IntrLine3Ellipsoid3.h
  Mathematics/IntrLine3OrientedBox3.h
  Mathematics/IntrLine3Plane3.h
  Mathematics/IntrLine3Sphere3.h
  Mathematics/IntrLine3Triangle3.h
  Mathematics/IntrOrientedBox2Circle2.h
  Mathematics/IntrOrientedBox2Cone2.h
  Mathematics/IntrOrientedBox2OrientedBox2.h
  Mathematics/IntrOrientedBox2Sector2.h
  Mathematics/IntrOrientedBox3Cone3.h
  Mathematics/IntrOrientedBox3Cylinder3.h
  Mathematics/IntrOrientedBox3Frustum3.h
  Mathematics/IntrOrientedBox3OrientedBox3.h
  Mathematics/IntrOrientedBox3Sphere3.h
  Mathematics/IntrPlane3Capsule3.h
  Mathematics/IntrPlane3Circle3.h
  Mathematics/IntrPlane3Cylinder3.h
  Mathematics/IntrPlane3Ellipsoid3.h
  Mathematics/IntrPlane3OrientedBox3.h
  Mathematics/IntrPlane3Plane3.h
  Mathematics/IntrPlane3Sphere3.h
  Mathematics/IntrPlane3Triangle3.h
  Mathematics/IntrRay2AlignedBox2.h
  Mathematics/IntrRay2Arc2.h
  Mathematics/IntrRay2Circle2.h
  Mathematics/IntrRay2OrientedBox2.h
  Mathematics/IntrRay2Ray2.h
  Mathematics/IntrRay2Segment2.h
  Mathematics/IntrRay2Triangle2.h
  Mathematics/IntrRay3AlignedBox3.h
  Mathematics/IntrRay3Capsule3.h
  Mathematics/IntrRay3Cone3.h
  Mathematics/IntrRay3Cylinder3.h
  Mathematics/IntrRay3Ellipsoid3.h
  Mathematics/IntrRay3OrientedBox3.h
  Mathematics/IntrRay3Plane3.h
  Mathematics/IntrRay3Sphere3.h
  Mathematics/IntrRay3Triangle3.h
  Mathematics/IntrSegment2AlignedBox2.h
  Mathematics/IntrSegment2Arc2.h
  Mathematics/IntrSegment2Circle2.h
  Mathematics/IntrSegment2OrientedBox2.h
  Mathematics/IntrSegment2Segment2.h
  Mathematics/IntrSegment2Triangle2.h
  Mathematics/IntrSegment3AlignedBox3.h
  Mathematics/IntrSegment3Capsule3.h
  Mathematics/IntrSegment3Cone3.h
  Mathematics/IntrSegment3Cylinder3.h
  Mathematics/IntrSegment3Ellipsoid3.h
  Mathematics/IntrSegment3OrientedBox3.h
  Mathematics/IntrSegment3Plane3.h
  Mathematics/IntrSegment3Sphere3.h
  Mathematics/IntrSegment3Triangle3.h
  Mathematics/IntrSphere3Cone3.h
  Mathematics/IntrSphere3Frustum3.h
  Mathematics/IntrSphere3Sphere3.h
  Mathematics/IntrSphere3Triangle3.h
  Mathematics/IntrTriangle2Triangle2.h
  Mathematics/IntrTriangle3OrientedBox3.h
  Mathematics/InvSqrtEstimate.h
  Mathematics/IsPlanarGraph.h
  Mathematics/LCPSolver.h
  Mathematics/LevenbergMarquardtMinimizer.h
  Mathematics/LexicoArray2.h
  Mathematics/Line.h
  Mathematics/LinearSystem.h
  Mathematics/Log2Estimate.h
  Mathematics/LogEstimate.h
  Mathematics/Logger.h
  Mathematics/LogToFile.h
  Mathematics/LogToStdout.h
  Mathematics/LogToStringArray.h
  Mathematics/Lozenge3.h
  Mathematics/MarchingCubes.h
  Mathematics/MassSpringArbitrary.h
  Mathematics/MassSpringCurve.h
  Mathematics/MassSpringSurface.h
  Mathematics/MassSpringVolume.h
  Mathematics/Math.h
  Mathematics/Matrix.h
  Mathematics/Matrix2x2.h
  Mathematics/Matrix3x3.h
  Mathematics/Matrix4x4.h
  Mathematics/Mesh.h
  Mathematics/MeshCurvature.h
  Mathematics/MinHeap.h
  Mathematics/MinimalCycleBasis.h
  Mathematics/Minimize1.h
  Mathematics/MinimizeN.h
  Mathematics/MinimumAreaBox2.h
  Mathematics/MinimumAreaCircle2.h
  Mathematics/MinimumVolumeBox3.h
  Mathematics/MinimumVolumeSphere3.h
  Mathematics/NaturalSplineCurve.h
  Mathematics/NearestNeighborQuery.h
  Mathematics/NURBSCircle.h
  Mathematics/NURBSCurve.h
  Mathematics/NURBSSphere.h
  Mathematics/NURBSSurface.h
  Mathematics/NURBSVolume.h
  Mathematics/OBBTreeOfPoints.h
  Mathematics/OdeEuler.h
  Mathematics/OdeImplicitEuler.h
  Mathematics/OdeMidpoint.h
  Mathematics/OdeRungeKutta4.h
  Mathematics/OdeSolver.h
  Mathematics/OrientedBox.h
  Mathematics/ParametricCurve.h
  Mathematics/ParametricSurface.h
  Mathematics/ParticleSystem.h
  Mathematics/PdeFilter.h
  Mathematics/PdeFilter1.h
  Mathematics/PdeFilter2.h
  Mathematics/PdeFilter3.h
  Mathematics/PlanarMesh.h
  Mathematics/Polygon2.h
  Mathematics/PolyhedralMassProperties.h
  Mathematics/Polyhedron3.h
  Mathematics/Polynomial1.h
  Mathematics/PolynomialCurve.h
  Mathematics/PrimalQuery2.h
  Mathematics/PrimalQuery3.h
  Mathematics/Projection.h
  Mathematics/QFNumber.h
  Mathematics/QuadricSurface.h
  Mathematics/QuarticRootsQR.h
  Mathematics/Quaternion.h
  Mathematics/RangeIteration.h
  Mathematics/Ray.h
  Mathematics/Rectangle.h
  Mathematics/RectangleManager.h
  Mathematics/RectangleMesh.h
  Mathematics/RectanglePatchMesh.h
  Mathematics/RevolutionMesh.h
  Mathematics/RiemannianGeodesic.h
  Mathematics/RigidBody.h
  Mathematics/RootsBisection.h
  Mathematics/RootsBisection1.h
  Mathematics/RootsBisection2.h
  Mathematics/RootsBrentsMethod.h
  Mathematics/RootsPolynomial.h
  Mathematics/Rotation.h
  Mathematics/Sector2.h
  Mathematics/Segment.h
  Mathematics/SeparatePoints2.h
  Mathematics/SeparatePoints3.h
  Mathematics/SharedPtrCompare.h
  Mathematics/SinEstimate.h
  Mathematics/SingularValueDecomposition.h
  Mathematics/SlerpEstimate.h
  Mathematics/SplitMeshByPlane.h
  Mathematics/SqrtEstimate.h
  Mathematics/StringUtility.h
  Mathematics/SurfaceExtractor.h
  Mathematics/SurfaceExtractorCubes.h
  Mathematics/SurfaceExtractorMC.h
  Mathematics/SurfaceExtractorTetrahedra.h
  Mathematics/SymmetricEigensolver.h
  Mathematics/SymmetricEigensolver2x2.h
  Mathematics/SymmetricEigensolver3x3.h
  Mathematics/TanEstimate.h
  Mathematics/TCBSplineCurve.h
  Mathematics/Tetrahedron3.h
  Mathematics/TetrahedronKey.h
  Mathematics/ThreadSafeMap.h
  Mathematics/ThreadSafeQueue.h
  Mathematics/TIQuery.h
  Mathematics/Torus3.h
  Mathematics/Transform.h
  Mathematics/Triangle.h
  Mathematics/TriangleKey.h
  Mathematics/TriangulateCDT.h
  Mathematics/TriangulateEC.h
  Mathematics/TSManifoldMesh.h
  Mathematics/TubeMesh.h
  Mathematics/UIntegerALU32.h
  Mathematics/UIntegerAP32.h
  Mathematics/UIntegerFP32.h
  Mathematics/UniqueVerticesTriangles.h
  Mathematics/UnsymmetricEigenvalues.h
  Mathematics/Vector.h
  Mathematics/Vector2.h
  Mathematics/Vector3.h
  Mathematics/Vector4.h
  Mathematics/VEManifoldMesh.h
  Mathematics/VertexAttribute.h
  Mathematics/VertexCollapseMesh.h
  Mathematics/VETManifoldMesh.h
  Mathematics/VETNonmanifoldMesh.h
  Mathematics/WeakPtrCompare.h
)

install(
	FILES
		Mathematics/ACosEstimate.h
		Mathematics/AdaptiveSkeletonClimbing2.h
		Mathematics/AdaptiveSkeletonClimbing3.h
		Mathematics/AlignedBox.h
		Mathematics/APConversion.h
		Mathematics/APInterval.h
		Mathematics/ApprCircle2.h
		Mathematics/ApprCone3.h
		Mathematics/ApprCylinder3.h
		Mathematics/ApprEllipse2.h
		Mathematics/ApprEllipseByArcs.h
		Mathematics/ApprEllipsoid3.h
		Mathematics/ApprGaussian2.h
		Mathematics/ApprGaussian3.h
		Mathematics/ApprGreatCircle3.h
		Mathematics/ApprHeightLine2.h
		Mathematics/ApprHeightPlane3.h
		Mathematics/ApprOrthogonalLine2.h
		Mathematics/ApprOrthogonalLine3.h
		Mathematics/ApprOrthogonalPlane3.h
		Mathematics/ApprParaboloid3.h
		Mathematics/ApprPolynomial2.h
		Mathematics/ApprPolynomial3.h
		Mathematics/ApprPolynomial4.h
		Mathematics/ApprPolynomialSpecial2.h
		Mathematics/ApprPolynomialSpecial3.h
		Mathematics/ApprPolynomialSpecial4.h
		Mathematics/ApprQuadratic2.h
		Mathematics/ApprQuadratic3.h
		Mathematics/ApprQuery.h
		Mathematics/ApprSphere3.h
		Mathematics/ApprTorus3.h
		Mathematics/ArbitraryPrecision.h
		Mathematics/Arc2.h
		Mathematics/Array2.h
		Mathematics/Array3.h
		Mathematics/Array4.h
		Mathematics/ASinEstimate.h
		Mathematics/ATanEstimate.h
		Mathematics/AtomicMinMax.h
		Mathematics/AxisAngle.h
		Mathematics/BandedMatrix.h
		Mathematics/BasisFunction.h
		Mathematics/BezierCurve.h
		Mathematics/BitHacks.h
		Mathematics/BoxManager.h
		Mathematics/BSNumber.h
		Mathematics/BSplineCurve.h
		Mathematics/BSplineCurveFit.h
		Mathematics/BSplineGeodesic.h
		Mathematics/BSplineReduction.h
		Mathematics/BSplineSurface.h
		Mathematics/BSplineSurfaceFit.h
		Mathematics/BSplineVolume.h
		Mathematics/BSPPolygon2.h
		Mathematics/BSPrecision.h
		Mathematics/BSRational.h
		Mathematics/Capsule.h
		Mathematics/ChebyshevRatio.h
		Mathematics/CholeskyDecomposition.h
		Mathematics/Circle3.h
		Mathematics/CLODPolyline.h
		Mathematics/Cone.h
		Mathematics/ConformalMapGenus0.h
		Mathematics/ConstrainedDelaunay2.h
		Mathematics/ContAlignedBox.h
		Mathematics/ContCapsule3.h
		Mathematics/ContCircle2.h
		Mathematics/ContCone.h
		Mathematics/ContCylinder3.h
		Mathematics/ContEllipse2.h
		Mathematics/ContEllipse2MinCR.h
		Mathematics/ContEllipsoid3.h
		Mathematics/ContEllipsoid3MinCR.h
		Mathematics/ContLozenge3.h
		Mathematics/ContOrientedBox2.h
		Mathematics/ContOrientedBox3.h
		Mathematics/ContPointInPolygon2.h
		Mathematics/ContPointInPolyhedron3.h
		Mathematics/ContScribeCircle2.h
		Mathematics/ContScribeCircle3Sphere3.h
		Mathematics/ContSphere3.h
		Mathematics/ConvertCoordinates.h
		Mathematics/ConvexHull2.h
		Mathematics/ConvexHull3.h
		Mathematics/ConvexMesh3.h
		Mathematics/ConvexPolyhedron3.h
		Mathematics/CosEstimate.h
		Mathematics/CubicRootsQR.h
		Mathematics/CurvatureFlow2.h
		Mathematics/CurvatureFlow3.h
		Mathematics/CurveExtractor.h
		Mathematics/CurveExtractorSquares.h
		Mathematics/CurveExtractorTriangles.h
		Mathematics/Cylinder3.h
		Mathematics/DarbouxFrame.h
		Mathematics/DCPQuery.h
		Mathematics/Delaunay2.h
		Mathematics/Delaunay2Mesh.h
		Mathematics/Delaunay3.h
		Mathematics/Delaunay3Mesh.h
		Mathematics/DisjointIntervals.h
		Mathematics/DisjointRectangles.h
		Mathematics/DistAlignedBox3OrientedBox3.h
		Mathematics/DistAlignedBoxAlignedBox.h
		Mathematics/DistCircle3Circle3.h
		Mathematics/DistLine3AlignedBox3.h
		Mathematics/DistLine3Circle3.h
		Mathematics/DistLine3OrientedBox3.h
		Mathematics/DistLine3Rectangle3.h
		Mathematics/DistLine3Triangle3.h
		Mathematics/DistLineLine.h
		Mathematics/DistLineRay.h
		Mathematics/DistLineSegment.h
		Mathematics/DistOrientedBox3OrientedBox3.h
		Mathematics/DistPoint3Circle3.h
		Mathematics/DistPoint3ConvexPolyhedron3.h
		Mathematics/DistPoint3Cylinder3.h
		Mathematics/DistPoint3Frustum3.h
		Mathematics/DistPoint3Plane3.h
		Mathematics/DistPoint3Rectangle3.h
		Mathematics/DistPoint3Tetrahedron3.h
		Mathematics/DistPointAlignedBox.h
		Mathematics/DistPointHyperellipsoid.h
		Mathematics/DistPointLine.h
		Mathematics/DistPointOrientedBox.h
		Mathematics/DistPointRay.h
		Mathematics/DistPointSegment.h
		Mathematics/DistPointTriangle.h
		Mathematics/DistPointTriangleExact.h
		Mathematics/DistRay3AlignedBox3.h
		Mathematics/DistRay3OrientedBox3.h
		Mathematics/DistRay3Rectangle3.h
		Mathematics/DistRay3Triangle3.h
		Mathematics/DistRayRay.h
		Mathematics/DistRaySegment.h
		Mathematics/DistRectangle3AlignedBox3.h
		Mathematics/DistRectangle3OrientedBox3.h
		Mathematics/DistRectangle3Rectangle3.h
		Mathematics/DistSegment3AlignedBox3.h
		Mathematics/DistSegment3OrientedBox3.h
		Mathematics/DistSegment3Rectangle3.h
		Mathematics/DistSegment3Triangle3.h
		Mathematics/DistSegmentSegment.h
		Mathematics/DistSegmentSegmentExact.h
		Mathematics/DistTriangle3AlignedBox3.h
		Mathematics/DistTriangle3OrientedBox3.h
		Mathematics/DistTriangle3Rectangle3.h
		Mathematics/DistTriangle3Triangle3.h
		Mathematics/EdgeKey.h
		Mathematics/Ellipse3.h
		Mathematics/EllipsoidGeodesic.h
		Mathematics/ETManifoldMesh.h
		Mathematics/ETNonmanifoldMesh.h
		Mathematics/EulerAngles.h
		Mathematics/Exp2Estimate.h
		Mathematics/ExpEstimate.h
		Mathematics/ExtremalQuery3.h
		Mathematics/ExtremalQuery3BSP.h
		Mathematics/ExtremalQuery3PRJ.h
		Mathematics/FastGaussianBlur1.h
		Mathematics/FastGaussianBlur2.h
		Mathematics/FastGaussianBlur3.h
		Mathematics/FastMarch.h
		Mathematics/FastMarch2.h
		Mathematics/FastMarch3.h
		Mathematics/FeatureKey.h
		Mathematics/FIQuery.h
		Mathematics/FPInterval.h
		Mathematics/FrenetFrame.h
		Mathematics/Frustum3.h
		Mathematics/GaussianBlur2.h
		Mathematics/GaussianBlur3.h
		Mathematics/GaussianElimination.h
		Mathematics/GaussNewtonMinimizer.h
		Mathematics/GenerateMeshUV.h
		Mathematics/GMatrix.h
		Mathematics/GradientAnisotropic2.h
		Mathematics/GradientAnisotropic3.h
		Mathematics/GVector.h
		Mathematics/Halfspace.h
		Mathematics/Histogram.h
		Mathematics/Hyperellipsoid.h
		Mathematics/Hyperplane.h
		Mathematics/Hypersphere.h
		Mathematics/IEEEBinary.h
		Mathematics/IEEEBinary16.h
		Mathematics/Image.h
		Mathematics/Image2.h
		Mathematics/Image3.h
		Mathematics/ImageUtility2.h
		Mathematics/ImageUtility3.h
		Mathematics/IndexAttribute.h
		Mathematics/Integration.h
		Mathematics/IntpAkima1.h
		Mathematics/IntpAkimaNonuniform1.h
		Mathematics/IntpAkimaUniform1.h
		Mathematics/IntpAkimaUniform2.h
		Mathematics/IntpAkimaUniform3.h
		Mathematics/IntpBicubic2.h
		Mathematics/IntpBilinear2.h
		Mathematics/IntpBSplineUniform.h
		Mathematics/IntpLinearNonuniform2.h
		Mathematics/IntpLinearNonuniform3.h
		Mathematics/IntpQuadraticNonuniform2.h
		Mathematics/IntpSphere2.h
		Mathematics/IntpThinPlateSpline2.h
		Mathematics/IntpThinPlateSpline3.h
		Mathematics/IntpTricubic3.h
		Mathematics/IntpTrilinear3.h
		Mathematics/IntpVectorField2.h
		Mathematics/IntrAlignedBox2AlignedBox2.h
		Mathematics/IntrAlignedBox2Circle2.h
		Mathematics/IntrAlignedBox2OrientedBox2.h
		Mathematics/IntrAlignedBox3AlignedBox3.h
		Mathematics/IntrAlignedBox3Cone3.h
		Mathematics/IntrAlignedBox3Cylinder3.h
		Mathematics/IntrAlignedBox3OrientedBox3.h
		Mathematics/IntrAlignedBox3Sphere3.h
		Mathematics/IntrArc2Arc2.h
		Mathematics/IntrCapsule3Capsule3.h
		Mathematics/IntrCircle2Arc2.h
		Mathematics/IntrCircle2Circle2.h
		Mathematics/IntrConvexMesh3Plane3.h
		Mathematics/IntrConvexPolygonHyperplane.h
		Mathematics/IntrDisk2Sector2.h
		Mathematics/IntrEllipse2Ellipse2.h
		Mathematics/IntrEllipsoid3Ellipsoid3.h
		Mathematics/IntrHalfspace2Polygon2.h
		Mathematics/IntrHalfspace3Capsule3.h
		Mathematics/IntrHalfspace3Cylinder3.h
		Mathematics/IntrHalfspace3Ellipsoid3.h
		Mathematics/IntrHalfspace3OrientedBox3.h
		Mathematics/IntrHalfspace3Segment3.h
		Mathematics/IntrHalfspace3Sphere3.h
		Mathematics/IntrHalfspace3Triangle3.h
		Mathematics/IntrIntervals.h
		Mathematics/IntrLine2AlignedBox2.h
		Mathematics/IntrLine2Arc2.h
		Mathematics/IntrLine2Circle2.h
		Mathematics/IntrLine2Line2.h
		Mathematics/IntrLine2OrientedBox2.h
		Mathematics/IntrLine2Ray2.h
		Mathematics/IntrLine2Segment2.h
		Mathematics/IntrLine2Triangle2.h
		Mathematics/IntrLine3AlignedBox3.h
		Mathematics/IntrLine3Capsule3.h
		Mathematics/IntrLine3Cone3.h
		Mathematics/IntrLine3Cylinder3.h
		Mathematics/IntrLine3Ellipsoid3.h
		Mathematics/IntrLine3OrientedBox3.h
		Mathematics/IntrLine3Plane3.h
		Mathematics/IntrLine3Sphere3.h
		Mathematics/IntrLine3Triangle3.h
		Mathematics/IntrOrientedBox2Circle2.h
		Mathematics/IntrOrientedBox2Cone2.h
		Mathematics/IntrOrientedBox2OrientedBox2.h
		Mathematics/IntrOrientedBox2Sector2.h
		Mathematics/IntrOrientedBox3Cone3.h
		Mathematics/IntrOrientedBox3Cylinder3.h
		Mathematics/IntrOrientedBox3Frustum3.h
		Mathematics/IntrOrientedBox3OrientedBox3.h
		Mathematics/IntrOrientedBox3Sphere3.h
		Mathematics/IntrPlane3Capsule3.h
		Mathematics/IntrPlane3Circle3.h
		Mathematics/IntrPlane3Cylinder3.h
		Mathematics/IntrPlane3Ellipsoid3.h
		Mathematics/IntrPlane3OrientedBox3.h
		Mathematics/IntrPlane3Plane3.h
		Mathematics/IntrPlane3Sphere3.h
		Mathematics/IntrPlane3Triangle3.h
		Mathematics/IntrRay2AlignedBox2.h
		Mathematics/IntrRay2Arc2.h
		Mathematics/IntrRay2Circle2.h
		Mathematics/IntrRay2OrientedBox2.h
		Mathematics/IntrRay2Ray2.h
		Mathematics/IntrRay2Segment2.h
		Mathematics/IntrRay2Triangle2.h
		Mathematics/IntrRay3AlignedBox3.h
		Mathematics/IntrRay3Capsule3.h
		Mathematics/IntrRay3Cone3.h
		Mathematics/IntrRay3Cylinder3.h
		Mathematics/IntrRay3Ellipsoid3.h
		Mathematics/IntrRay3OrientedBox3.h
		Mathematics/IntrRay3Plane3.h
		Mathematics/IntrRay3Sphere3.h
		Mathematics/IntrRay3Triangle3.h
		Mathematics/IntrSegment2AlignedBox2.h
		Mathematics/IntrSegment2Arc2.h
		Mathematics/IntrSegment2Circle2.h
		Mathematics/IntrSegment2OrientedBox2.h
		Mathematics/IntrSegment2Segment2.h
		Mathematics/IntrSegment2Triangle2.h
		Mathematics/IntrSegment3AlignedBox3.h
		Mathematics/IntrSegment3Capsule3.h
		Mathematics/IntrSegment3Cone3.h
		Mathematics/IntrSegment3Cylinder3.h
		Mathematics/IntrSegment3Ellipsoid3.h
		Mathematics/IntrSegment3OrientedBox3.h
		Mathematics/IntrSegment3Plane3.h
		Mathematics/IntrSegment3Sphere3.h
		Mathematics/IntrSegment3Triangle3.h
		Mathematics/IntrSphere3Cone3.h
		Mathematics/IntrSphere3Frustum3.h
		Mathematics/IntrSphere3Sphere3.h
		Mathematics/IntrSphere3Triangle3.h
		Mathematics/IntrTriangle2Triangle2.h
		Mathematics/IntrTriangle3OrientedBox3.h
		Mathematics/InvSqrtEstimate.h
		Mathematics/IsPlanarGraph.h
		Mathematics/LCPSolver.h
		Mathematics/LevenbergMarquardtMinimizer.h
		Mathematics/LexicoArray2.h
		Mathematics/Line.h
		Mathematics/LinearSystem.h
		Mathematics/Log2Estimate.h
		Mathematics/LogEstimate.h
		Mathematics/Logger.h
		Mathematics/LogToFile.h
		Mathematics/LogToStdout.h
		Mathematics/LogToStringArray.h
		Mathematics/Lozenge3.h
		Mathematics/MarchingCubes.h
		Mathematics/MassSpringArbitrary.h
		Mathematics/MassSpringCurve.h
		Mathematics/MassSpringSurface.h
		Mathematics/MassSpringVolume.h
		Mathematics/Math.h
		Mathematics/Matrix.h
		Mathematics/Matrix2x2.h
		Mathematics/Matrix3x3.h
		Mathematics/Matrix4x4.h
		Mathematics/Mesh.h
		Mathematics/MeshCurvature.h
		Mathematics/MinHeap.h
		Mathematics/MinimalCycleBasis.h
		Mathematics/Minimize1.h
		Mathematics/MinimizeN.h
		Mathematics/MinimumAreaBox2.h
		Mathematics/MinimumAreaCircle2.h
		Mathematics/MinimumVolumeBox3.h
		Mathematics/MinimumVolumeSphere3.h
		Mathematics/NaturalSplineCurve.h
		Mathematics/NearestNeighborQuery.h
		Mathematics/NURBSCircle.h
		Mathematics/NURBSCurve.h
		Mathematics/NURBSSphere.h
		Mathematics/NURBSSurface.h
		Mathematics/NURBSVolume.h
		Mathematics/OBBTreeOfPoints.h
		Mathematics/OdeEuler.h
		Mathematics/OdeImplicitEuler.h
		Mathematics/OdeMidpoint.h
		Mathematics/OdeRungeKutta4.h
		Mathematics/OdeSolver.h
		Mathematics/OrientedBox.h
		Mathematics/ParametricCurve.h
		Mathematics/ParametricSurface.h
		Mathematics/ParticleSystem.h
		Mathematics/PdeFilter.h
		Mathematics/PdeFilter1.h
		Mathematics/PdeFilter2.h
		Mathematics/PdeFilter3.h
		Mathematics/PlanarMesh.h
		Mathematics/Polygon2.h
		Mathematics/PolyhedralMassProperties.h
		Mathematics/Polyhedron3.h
		Mathematics/Polynomial1.h
		Mathematics/PolynomialCurve.h
		Mathematics/PrimalQuery2.h
		Mathematics/PrimalQuery3.h
		Mathematics/Projection.h
		Mathematics/QFNumber.h
		Mathematics/QuadricSurface.h
		Mathematics/QuarticRootsQR.h
		Mathematics/Quaternion.h
		Mathematics/RangeIteration.h
		Mathematics/Ray.h
		Mathematics/Rectangle.h
		Mathematics/RectangleManager.h
		Mathematics/RectangleMesh.h
		Mathematics/RectanglePatchMesh.h
		Mathematics/RevolutionMesh.h
		Mathematics/RiemannianGeodesic.h
		Mathematics/RigidBody.h
		Mathematics/RootsBisection.h
		Mathematics/RootsBisection1.h
		Mathematics/RootsBisection2.h
		Mathematics/RootsBrentsMethod.h
		Mathematics/RootsPolynomial.h
		Mathematics/Rotation.h
		Mathematics/Sector2.h
		Mathematics/Segment.h
		Mathematics/SeparatePoints2.h
		Mathematics/SeparatePoints3.h
		Mathematics/SharedPtrCompare.h
		Mathematics/SinEstimate.h
		Mathematics/SingularValueDecomposition.h
		Mathematics/SlerpEstimate.h
		Mathematics/SplitMeshByPlane.h
		Mathematics/SqrtEstimate.h
		Mathematics/StringUtility.h
		Mathematics/SurfaceExtractor.h
		Mathematics/SurfaceExtractorCubes.h
		Mathematics/SurfaceExtractorMC.h
		Mathematics/SurfaceExtractorTetrahedra.h
		Mathematics/SymmetricEigensolver.h
		Mathematics/SymmetricEigensolver2x2.h
		Mathematics/SymmetricEigensolver3x3.h
		Mathematics/TanEstimate.h
		Mathematics/TCBSplineCurve.h
		Mathematics/Tetrahedron3.h
		Mathematics/TetrahedronKey.h
		Mathematics/ThreadSafeMap.h
		Mathematics/ThreadSafeQueue.h
		Mathematics/TIQuery.h
		Mathematics/Torus3.h
		Mathematics/Transform.h
		Mathematics/Triangle.h
		Mathematics/TriangleKey.h
		Mathematics/TriangulateCDT.h
		Mathematics/TriangulateEC.h
		Mathematics/TSManifoldMesh.h
		Mathematics/TubeMesh.h
		Mathematics/UIntegerALU32.h
		Mathematics/UIntegerAP32.h
		Mathematics/UIntegerFP32.h
		Mathematics/UniqueVerticesTriangles.h
		Mathematics/UnsymmetricEigenvalues.h
		Mathematics/Vector.h
		Mathematics/Vector2.h
		Mathematics/Vector3.h
		Mathematics/Vector4.h
		Mathematics/VEManifoldMesh.h
		Mathematics/VertexAttribute.h
		Mathematics/VertexCollapseMesh.h
		Mathematics/VETManifoldMesh.h
		Mathematics/VETNonmanifoldMesh.h
		Mathematics/WeakPtrCompare.h
		DESTINATION
		include/GTMathematics
)

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

# Preprocessor definitions
target_compile_definitions(${PROJECT_NAME} PRIVATE
  $<$<CONFIG:Debug>:_UNICODE;_DEBUG;_LIB>
  $<$<CONFIG:Release>:_UNICODE;NDEBUG;_LIB>
)

# SDL check
target_compile_options(${PROJECT_NAME} PRIVATE
  "$<$<CONFIG:Debug>:/sdl>"
  "$<$<CONFIG:Release>:/sdl>"
)

# Minimal rebuild
if (MSVC)
  target_compile_options(${PROJECT_NAME} PRIVATE
    "$<$<CONFIG:Debug>:/Gm->"
    "$<$<CONFIG:Release>:/Gm->"
  )
endif ()

# Precompiled header files
if (MSVC)
  target_compile_options(${PROJECT_NAME} PRIVATE
    "$<$<CONFIG:Debug>:/Yu>"
    "$<$<CONFIG:Release>:/Yu>"
  )
endif ()
